some Styling done

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpg" href="img/efe-kurnaz-315384-unsplash.jpg" />
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <h1>Lab: Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
         Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="1">
-        Grid Width:
+        <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
         <input type="number" id="inputWeight" name="width" min="1" value="1">
         <input type="submit">
     </form>
@@ -25,4 +29,5 @@
 
     <script src="designs.js"></script>
 </body>
+
 </html>
