--- a/index.html
+++ b/index.html
@@ -4,30 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="img/efe-kurnaz-315384-unsplash.jpg" />
     <title>Pixel Art Maker!</title>
+    <link rel="icon" type="image/jpg" href="img/efe-kurnaz-315384-unsplash.jpg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
     <h1>Lab: Pixel Art Maker</h1>
+    <div class="row">
+        <div class="col-4">
+            <h2>Choose Grid Size</h2>
+            <form id="sizePicker">
+                <p>Grid Height:
+                    <input type="number" id="inputHeight" name="height" min="1" value="10" max="80" required>
+                </p>
+                <p>Grid Width:
+                    <input type="number" id="inputWidth" name="width" min="1" value="10" max="80" required>
+                </p>
+                <div>
+                    <button type="submit" id="submit" onclick="makeGrid">Submit</button>
+                </div>
+            </form>
 
-    <h2>Choose Grid Size</h2>
-    <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="1"> Grid Width:
-        <input type="number" id="inputWeight" name="width" min="1" value="1">
-        <input type="submit">
-    </form>
+            <h2 class="Picker">Pick A Color</h2>
+            <input type="color" id="colorPicker">
+        </div>
 
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
+        <div class="col-6">
+            <h2>Design Canvas</h2>
+            <table id="pixelCanvas">
+            </table>
+            <button onclick="eraseCanvas()" class="styleButton">Clear</button>
 
-    <h2>Design Canvas</h2>
-    <table id="pixelCanvas"></table>
+        </div>
+    </div>
 
-    <script src="designs.js"></script>
+    <footer>
+        <div class="widewrapper copyright ">
+            <p> Made with <span style="font-size:140%;color:#4dc451;">&hearts;</span> by
+                <a href="https://github.com/MzLovelyj " target="_blank ">@mz_lovelyj<a> 🐱</p>
+            <!--target="_blank " allows to open the link in a new tab-->
+        </div>
+    </footer>
+
+
+    <!-- JavaScript -->
+    <script src="designs.js "></script>
 </body>
 
 </html>
