--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Art Maker!</title>
     <link rel="icon" type="image/jpg" href="img/efe-kurnaz-315384-unsplash.jpg" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -13,32 +14,48 @@
 
 <body>
     <h1>Lab: Pixel Art Maker</h1>
-    <div class="row">
-        <div class="col-4">
+    <div class="box">
+        <div class="container-fluid">
             <h2>Choose Grid Size</h2>
+            <br>
             <form id="sizePicker">
-                <p>Grid Height:
-                    <input type="number" id="inputHeight" name="height" min="1" value="10" max="80" required>
-                </p>
-                <p>Grid Width:
-                    <input type="number" id="inputWidth" name="width" min="1" value="10" max="80" required>
-                </p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Grid Height:
+                            <input type="number" id="inputHeight" name="height" min="1" value="10" max="50" required>
+                        </p>
+                    </div>
+
+                    <div class="col-md-6">
+                        <p>Grid Width:
+                            <input type="number" id="inputWidth" name="width" min="1" value="10" max="50" required>
+                        </p>
+                    </div>
+                </div>
+
                 <div>
                     <button type="submit" id="submit" onclick="makeGrid">Submit</button>
                 </div>
             </form>
-
-            <h2 class="Picker">Pick A Color</h2>
-            <input type="color" id="colorPicker">
         </div>
+        <br>
 
-        <div class="col-6">
+        <!-- Picking a color Section -->
+        <h2 class="Picker">Pick A Color</h2>
+        <input type="color" id="colorPicker">
+        <!-- /color Section -->
+        <br>
+
+        <div>
+            <br>
             <h2>Design Canvas</h2>
             <table id="pixelCanvas">
             </table>
-            <button onclick="eraseCanvas()" class="styleButton">Clear</button>
-
+            <br>
+            <button onclick="eraseCanvas()" class="earseButton">Clear</button>
         </div>
+
+        <!-- /box -->
     </div>
 
     <footer>
@@ -52,6 +69,9 @@
 
     <!-- JavaScript -->
     <script src="designs.js "></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
