--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer>
         <div class="widewrapper copyright ">
             <p> Made with <span style="font-size:140%;color:#4dc451;">&hearts;</span> by
-                <a href="https://github.com/MzLovelyj " target="_blank ">@mz_lovelyj<a> 🐱</p>
+                <a href="https://github.com/jesspalacios " target="_blank ">@jesspalacios<a> 🐱</p>
             <!--target="_blank " allows to open the link in a new tab-->
         </div>
     </footer>
